[project]
name = "pulse"
version = "0.1.0"
description = "Healthcare agents project with ML screening capabilities"
authors = [
    {name = "Yara Mubarak", email = "yaramubarak8@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "evaluate>=0.4.0",
    "matplotlib",
    "openai-agents>=0.2.10",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "tqdm>=4.64.0",
    "aiohttp>=3.8.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
    "bleurt @ git+https://github.com/google-research/bleurt.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

